# rust-gym

./: .gitignore  README.md
acft/: Cargo.toml
acft/src/: main.rs
apples/: Cargo.toml
apples/prisma/: dev.db  schema.prisma
apples/prisma-cli/: Cargo.toml
apples/prisma/migrations/20231231212037_init/: migration.sql
apples/prisma/migrations/20231231222156_inventory/: migration.sql
apples/src/: main.rs  prisma.rs
arrow-performance/: Cargo.toml
arrow-performance/src/: lib.rs  linear.rs  main.rs  quadratic.rs
caesar/src/: main.rs
datatypes/: Cargo.toml
datatypes/src/: main.rs
estimator/: Cargo.toml
estimator/src/: main.rs
fib-cf/: Cargo.toml  README.md  package.json  wrangler.toml
fib-cf/src/: lib.rs
get-hyped/: Cargo.toml
get-hyped/src/: main.rs
greeter-lambda/: Cargo.toml  rust-role.json
greeter-lambda/src/: main.rs
grocery-list/: Cargo.toml
grocery-list/src/: main.rs
guess-pw/: Cargo.toml
guess-pw/src/: main.rs
http-client/: Cargo.toml
http-client/src/: main.rs
isprime/src/: main.rs
madlib/: Cargo.toml
madlib/src/: main.rs
maps-and-blocks/: Cargo.toml
maps-and-blocks/src/: main.rs
mario/: Cargo.toml
mario/src/: main.rs
minmax_testing/: Cargo.toml
minmax_testing/src/: main.rs
opposite/: Cargo.toml
opposite/src/: main.rs
plus-minus/src/: main.rs
primates/: Cargo.toml
primates/src/: main.rs
rotate-matrix/: Cargo.toml
rotate-matrix/src/: main.rs
sandbox/src/: main.rs
src/: binary_add.rs  fib.rs  fizzbuzzbing.rs  openai_fetch.rs  sorter.rs
string_word_reverse/: Cargo.toml
string_word_reverse/src/: main.rs
structs-heaps-borrows-threads/: Cargo.toml
tower/: Cargo.toml
tower/src/: main.rs
trim-str/: Cargo.toml
vecs_and_options/: Cargo.toml
web-guesser/: Cargo.toml
web-json-hello/: Cargo.toml
(+5 files in other folders)
